# gungnir

./: .gitignore  Dockerfile  LICENSE  Pipfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/: codeql-config.yml  dependabot.yml
.github/workflows/: codeql.yml  dependency-review.yml  docker-release.yml  python-package.yml  python-publish.yml  quibble.yml  semgrep.yml
gungnir/: __init__.py  __main__.py  dependencytrack.py  gungnir.py  project.py  syft.py
gungnir/dependencytrack/: api.py  project.py
tests/: test_project.py
