[project]
name = "gungnir"
version = "0.2.2"
authors = [{ name = "GeekMasher" }]
description = "Homelab Automation Bot to Guard your very own Asgard"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
dependencies = [
    "certifi==2023.7.22",
    "charset-normalizer==3.2.0",
    "docker==6.1.3",
    "idna==3.4",
    "packaging==23.1",
    "requests==2.31.0",
    "urllib3==2.0.4",
    "websocket-client==1.6.1",
]

[tool.setuptools.packages.find]
where = ["gungnir"]

[project.urls]
"Homepage" = "https://github.com/GeekMasher/gungnir"
"Bug Tracker" = "https://github.com/GeekMasher/gungnir/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
