[project]
name = "gungnir"
version = "0.3.0"
authors = [{ name = "GeekMasher" }]
description = "Homelab Automation Bot to Guard your very own Asgard"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
dependencies = [
    "certifi==2025.1.31",
    "charset-normalizer==3.4.1",
    "docker==7.1.0",
    "idna==3.10",
    "packaging==24.2",
    "requests==2.32.3",
    "urllib3==2.3.0",
    "websocket-client==1.8.0",
]

[tool.setuptools.packages.find]
where = ["gungnir"]

[project.urls]
"Homepage" = "https://github.com/GeekMasher/gungnir"
"Bug Tracker" = "https://github.com/GeekMasher/gungnir/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
